load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball", "oci_image_index")
load("@rules_oci//cosign:defs.bzl", "cosign_sign")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/salrashid123/testapp",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_net//http2:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

go_binary(
    name = "main",
    out = "server", 
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goos = "linux", 
    goarch = "amd64",       
)

pkg_tar(
    name = "main-tar",
    srcs = [":main"],
    package_dir = "/",
)

oci_image(
    name = "app-image",
    base = "@distroless_base",
    tars = [":main-tar"],   
    entrypoint = ["/server"],
    cmd = [],
    exposed_ports = [
        "8080/tcp",
    ],    
)

oci_image_index(
    name = "app-index",
    images = [
        ":app-image",
    ]
)

oci_tarball(
    name = "tar-docker",
    image = "app-image",
    format = "docker",
    repo_tags = ["localhost:4000/test:server"],
)

oci_tarball(
    name = "tar-oci-index",
    image = ":app-index",
    format = "oci",
    repo_tags = ["localhost:4000/test:server"],
)

oci_push(
    name = "push-image",
    image = ":app-image",
    repository = "localhost:4000/test",
    remote_tags = ["server"],
)
